update dependencies, plugins and gradle wrapper